--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "openai>=1.0.0",
     "requests>=2.31.0",
+    "python-binance>=1.0.0",
 ]
 
 [project.optional-dependencies]
